--- a/public/index.html
+++ b/public/index.html
@@ -2,171 +2,233 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1.0,viewport-fit=cover" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
   <title>TrigguiApp – Un instante, un universo</title>
   <link href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;700&family=Poppins:wght@500&display=swap" rel="stylesheet" />
   <style>
-    * { margin: 0; padding: 0; box-sizing: border-box; }
+    :root {
+      --header-height: 60px;
+      --footer-height: 120px;
+    }
+    * {
+      margin: 0; padding: 0; box-sizing: border-box;
+    }
     html, body {
       width: 100%;
       height: 100%;
       font-family: 'Archivo', sans-serif;
       background: linear-gradient(135deg, #0d0e1a, #1a1c2d);
       overflow: hidden;
-      perspective: 1000px;
+      overscroll-behavior: none;
     }
     body.dark {
       background: #000;
     }
+
     .main {
       display: flex;
       flex-direction: column;
-      height: 100dvh;
+      height: 100vh;
       opacity: 0;
-      animation: fadeIn 1.5s ease forwards;
+      animation: fadeIn 1s ease forwards;
     }
+
     .header-message {
-      padding: 1.5vh;
-      font-size: clamp(1.3rem, 3vw, 2.1rem);
+      height: var(--header-height);
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      padding: 0 2vw;
+    }
+
+    .header-gradient {
       font-weight: 800;
-      text-align: center;
-      background: linear-gradient(270deg, #ff00cc, #3333ff, #00f2fe, #ff9966);
-      background-size: 800% 800%;
+      font-size: clamp(1.3rem, 2.5vw, 2rem);
+      background: linear-gradient(to right, #ff8a00, #e52e71, #9b00ff, #00c6ff);
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
-      animation: gradientTitle 12s ease infinite;
-      text-shadow: 0 0 8px rgba(255,255,255,0.1);
+      white-space: nowrap;
+      animation: colorFlow 6s infinite linear;
     }
+
     .grid {
       flex: 1;
       display: grid;
-      gap: 1.4vw;
+      gap: 1.5vw;
       padding: 0 2vw;
       grid-template-columns: 1fr 1fr;
       grid-template-rows: 1fr 1fr;
     }
+
     @media (orientation: landscape) {
-      .grid { grid-template-columns: repeat(4, 1fr); grid-template-rows: 1fr; }
+      .grid {
+        grid-template-columns: repeat(4, 1fr);
+        grid-template-rows: 1fr;
+      }
     }
+
     .block {
       position: relative;
       display: flex;
       justify-content: center;
       align-items: center;
       text-align: center;
-      border-radius: 20px;
+      border-radius: 18px;
       font-weight: bold;
       font-size: clamp(1rem, 1.9vw, 1.3rem);
       color: #fff;
       background-size: 200% 200%;
       background-position: center;
       cursor: pointer;
-      transition: .5s;
+      transition: transform 0.4s ease;
       overflow: hidden;
-      transform: scale(.95);
-      opacity: 0;
-      animation: scaleFadeIn 1.6s forwards;
-      padding: 10px;
+      transform: scale(1);
+      will-change: transform, opacity;
+      animation: popIn 1.2s ease forwards;
     }
+
     .block-content {
       position: absolute;
       inset: 0;
       display: flex;
       justify-content: center;
       align-items: center;
-      padding: 10px;
+      padding: 6px;
       text-align: center;
     }
+
     .label { z-index: 1; }
+
     .accionable {
       color: #fff;
       font-family: 'Poppins', sans-serif;
-      font-size: clamp(0.9rem, 1.4vw, 1.2rem);
+      font-size: clamp(.9rem, 1.4vw, 1.2rem);
       font-weight: 600;
-      padding: 12px;
+      padding: 10px;
       border-radius: 14px;
       opacity: 0;
-      animation: aparecer .6s forwards;
+      animation: fadeIn 0.6s forwards;
       text-align: center;
-      box-shadow: 0 6px 20px rgba(0,0,0,.3);
+      box-shadow: 0 6px 20px rgba(0, 0, 0, .3);
     }
+
     .portada-wrapper {
-      width: 100%; height: 100%;
-      display: flex; justify-content: center; align-items: center;
-      background: radial-gradient(circle,#ffffff10,#0000);
+      width: 100%;
+      height: 100%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background: radial-gradient(circle, #ffffff10, #0000);
       animation: glow 6s ease-in-out infinite;
     }
+
     .portada-wrapper img {
-      width: 85%;
-      max-height: 92%;
+      width: 80%;
+      max-height: 90%;
       object-fit: contain;
       border-radius: 20px;
-      box-shadow: 0 10px 24px rgba(0,0,0,.4);
-      transition: transform .5s;
+      box-shadow: 0 10px 24px rgba(0, 0, 0, .4);
+      transition: transform 0.5s;
     }
+
     .portada-wrapper img:hover {
       transform: scale(1.03) rotateY(4deg) rotateX(2deg);
     }
+
     .footer {
-      min-height: 110px;
+      height: var(--footer-height);
       display: flex;
       flex-direction: column;
       align-items: center;
       justify-content: flex-start;
       padding: 3vh 2vw 2vh;
     }
+
     .shock {
-      background: linear-gradient(45deg,#ff4b1f,#1e90ff,#ff4b1f,#1e90ff);
-      background-size: 400% 400%;
-      animation: gradientFlow 4s ease infinite;
-      color: #fff;
+      background: linear-gradient(135deg, #ff00cc, #3333ff, #00ffff);
+      color: white;
       font-weight: bold;
       border: none;
       border-radius: 28px;
-      padding: 14px 28px;
-      margin-top: 6px;
-      font-size: clamp(1rem, 2vw, 1.4rem);
+      padding: 12px 22px;
+      margin-top: 8px;
+      font-size: clamp(.9rem, 1.8vw, 1.2rem);
       cursor: pointer;
-      box-shadow: 0 0 22px rgba(255, 105, 180, .4);
+      box-shadow: 0 0 16px rgba(255, 255, 255, 0.2);
+      animation: pulse 2s infinite;
       max-width: 95%;
     }
+
     .counter {
       font-size: clamp(.9rem, 1.2vw, 1.1rem);
       color: #fff;
-      margin-top: 8px;
+      margin-top: 6px;
       font-family: 'Poppins', sans-serif;
       text-align: center;
       white-space: nowrap;
       opacity: 0;
-      animation: fadeInInstant .3s forwards;
+      animation: fadeIn 0.3s forwards;
     }
+
     .resaltado {
       font-size: 1.1em;
-      color: #ffcc00;
+      color: #ffeb3b;
       font-weight: 700;
     }
+
     .trigguiletras {
       height: 20px;
       opacity: .9;
       margin-top: 1.5vh;
     }
+
     .hidden { display: none !important; }
 
-    @keyframes fadeIn { from { opacity: 0; transform: translateY(20px) } to { opacity: 1; transform: translateY(0) } }
-    @keyframes fadeInInstant { to { opacity: 1 } }
-    @keyframes scaleFadeIn { to { transform: scale(1); opacity: 1 } }
-    @keyframes aparecer { from { opacity: 0; transform: scale(.95) } to { opacity: 1; transform: scale(1) } }
-    @keyframes glow { 0% { background: radial-gradient(circle, #ffffff05, #0000) } 50% { background: radial-gradient(circle, #ffffff15, #0000) } 100% { background: radial-gradient(circle, #ffffff05, #0000) } }
-    @keyframes gradientFlow { 0% { background-position: 0% 50% } 50% { background-position: 100% 50% } 100% { background-position: 0% 50% } }
-    @keyframes gradientTitle { 0% { background-position: 0% 50% } 50% { background-position: 100% 50% } 100% { background-position: 0% 50% } }
+    .frase-magica {
+      font-size: 1rem;
+      color: #00ffff;
+      text-align: center;
+      margin-top: 1rem;
+      font-family: 'Poppins', sans-serif;
+      animation: fadeIn 1.4s ease;
+    }
+
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(20px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
+
+    @keyframes popIn {
+      0% { transform: scale(0.95); opacity: 0; }
+      100% { transform: scale(1); opacity: 1; }
+    }
+
+    @keyframes pulse {
+      0%, 100% { transform: scale(1); }
+      50% { transform: scale(1.06); }
+    }
+
+    @keyframes glow {
+      0%, 100% { background: radial-gradient(circle, #ffffff05, #0000); }
+      50% { background: radial-gradient(circle, #ffffff20, #0000); }
+    }
+
+    @keyframes colorFlow {
+      0% { filter: hue-rotate(0deg); }
+      100% { filter: hue-rotate(360deg); }
+    }
   </style>
 </head>
+
 <body>
   <div class="main">
-    <div class="header-message">¿Dónde está el libro físico? 📚</div>
+    <div class="header-message">
+      <div class="header-gradient">¿Dónde está el libro? 📚</div>
+    </div>
     <div class="grid" id="gridContainer"></div>
     <div class="footer">
-      <button class="shock hidden" id="shockBtn">📖 ¡Chócalas si abriste libro físico!</button>
+      <div class="frase-magica hidden" id="fraseMagica">✨ Este libro te eligió a ti. No es coincidencia.</div>
+      <button class="shock hidden" id="shockBtn">📖 ¡Chócalas!</button>
       <div class="counter hidden" id="contador">✨ Juntos hemos abierto <span class="resaltado">...</span> libros físicos ✨</div>
       <img src="/trigguiletras.png" class="trigguiletras" id="logoTriggui">
     </div>
@@ -175,15 +237,24 @@
   <script>
     const $ = id => document.getElementById(id);
     let libroActual, bloquePortada, revelado = false;
+    const emojis = ["🌊","🛡️","🧠","📘","🔮","❤️","✨","🪞"];
 
     fetch("https://raw.githubusercontent.com/badirnakid/triggui-content/main/contenido.json")
       .then(res => res.json())
       .then(data => {
-        const libro = data.libros[Math.floor(Math.random() * data.libros.length)];
+        const libro = data.libros[Math.floor(Math.random()*data.libros.length)];
         libroActual = libro;
-        bloquePortada = Math.floor(Math.random() * 4);
+        bloquePortada = Math.floor(Math.random()*4);
         iniciarUI(libro);
       });
+
+    function generarGradiente(color) {
+      const h = parseInt(color.slice(1,3),16),
+            l = parseInt(color.slice(3,5),16),
+            s = parseInt(color.slice(5,7),16);
+      const light = `rgba(${Math.min(h+30,255)},${Math.min(l+30,255)},${Math.min(s+30,255)},0.8)`;
+      return `linear-gradient(135deg, ${color}, ${light})`;
+    }
 
     function iniciarUI(libro) {
       const grid = $("gridContainer");
@@ -193,9 +264,10 @@
         const div = document.createElement("div");
         div.className = "block";
         div.id = `bloque${i}`;
-        div.style.background = libro.colores[i] || "#555";
+        div.style.background = generarGradiente(libro.colores[i] || "#555");
+        const emoji = emojis[i % emojis.length];
         div.innerHTML = `
-          <div class="block-content label">${palabra}</div>
+          <div class="block-content label">${emoji} ${palabra}</div>
           <div class="block-content accionable hidden" id="bloque${i}Text">${libro.frases[i]}</div>`;
         div.onclick = () => manejarClick(i);
         grid.appendChild(div);
@@ -232,7 +304,11 @@
       document.body.classList.add("dark");
       document.body.style.background = libroActual.fondo;
       $("logoTriggui").classList.add("hidden");
-      $("shockBtn").classList.remove("hidden");
+      $("fraseMagica").classList.remove("hidden");
+      setTimeout(() => {
+        $("fraseMagica").classList.add("hidden");
+        $("shockBtn").classList.remove("hidden");
+      }, 2500);
       revelado = true;
     }
 
