--- a/public/index.html
+++ b/public/index.html
@@ -11,28 +11,29 @@
       --footer-height: 120px;
     }
     * {
-      margin: 0; padding: 0; box-sizing: border-box;
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
     }
     html, body {
-      width: 100%;
-      height: 100%;
       font-family: 'Archivo', sans-serif;
       background: linear-gradient(135deg, #0d0e1a, #1a1c2d);
-      overflow: hidden;
       overscroll-behavior: none;
+      overflow-x: hidden;
+      height: 100%;
+      min-height: 100dvh;
     }
     body.dark {
       background: #000;
     }
-
     .main {
       display: flex;
       flex-direction: column;
-      height: 100vh;
+      height: 100dvh;
+      min-height: 100vh;
       opacity: 0;
       animation: fadeIn 1.2s ease forwards;
     }
-
     .header-message {
       height: var(--header-height);
       display: flex;
@@ -40,7 +41,6 @@
       justify-content: center;
       padding: 0 2vw;
     }
-
     .header-gradient {
       font-weight: 900;
       font-size: clamp(1.4rem, 2.6vw, 2.2rem);
@@ -51,7 +51,6 @@
       animation: pulseText 8s linear infinite;
       white-space: nowrap;
     }
-
     .grid {
       flex: 1;
       display: grid;
@@ -60,14 +59,12 @@
       grid-template-columns: 1fr 1fr;
       grid-template-rows: 1fr 1fr;
     }
-
     @media (orientation: landscape) {
       .grid {
         grid-template-columns: repeat(4, 1fr);
         grid-template-rows: 1fr;
       }
     }
-
     .block {
       position: relative;
       display: flex;
@@ -83,11 +80,8 @@
       cursor: pointer;
       transition: transform 0.4s ease;
       overflow: hidden;
-      transform: scale(1);
-      will-change: transform, opacity;
-      animation: popIn 0.8s ease forwards;
+      animation: popIn 0.7s ease forwards;
     }
-
     .block-content {
       position: absolute;
       inset: 0;
@@ -97,9 +91,7 @@
       padding: 6px;
       text-align: center;
     }
-
     .label { z-index: 1; }
-
     .accionable {
       color: #fff;
       font-family: 'Poppins', sans-serif;
@@ -112,7 +104,6 @@
       text-align: center;
       box-shadow: 0 6px 20px rgba(0, 0, 0, .3);
     }
-
     .portada-wrapper {
       width: 100%;
       height: 100%;
@@ -122,7 +113,6 @@
       background: radial-gradient(circle, #ffffff10, #0000);
       animation: glow 6s ease-in-out infinite;
     }
-
     .portada-wrapper img {
       width: 80%;
       max-height: 90%;
@@ -131,11 +121,9 @@
       box-shadow: 0 10px 24px rgba(0, 0, 0, .4);
       transition: transform 0.5s;
     }
-
     .portada-wrapper img:hover {
       transform: scale(1.03) rotateY(4deg) rotateX(2deg);
     }
-
     .footer {
       height: var(--footer-height);
       display: flex;
@@ -144,7 +132,6 @@
       justify-content: flex-start;
       padding: 3vh 2vw 2vh;
     }
-
     .shock {
       background: linear-gradient(135deg, #ff006e, #8338ec, #3a86ff);
       color: white;
@@ -159,7 +146,6 @@
       animation: pulse 2s infinite;
       max-width: 95%;
     }
-
     .counter {
       font-size: clamp(.9rem, 1.2vw, 1.1rem);
       color: #fff;
@@ -170,21 +156,17 @@
       opacity: 0;
       animation: fadeIn 0.3s forwards;
     }
-
     .resaltado {
       font-size: 1.1em;
       color: #ffeb3b;
       font-weight: 700;
     }
-
     .trigguiletras {
       height: 20px;
       opacity: .9;
       margin-top: 1.5vh;
     }
-
     .hidden { display: none !important; }
-
     .frase-magica {
       font-size: 1rem;
       color: #00ffff;
@@ -193,27 +175,22 @@
       font-family: 'Poppins', sans-serif;
       animation: fadeIn 1.4s ease;
     }
-
     @keyframes fadeIn {
       from { opacity: 0; transform: translateY(20px); }
       to { opacity: 1; transform: translateY(0); }
     }
-
     @keyframes popIn {
       0% { transform: scale(0.95); opacity: 0; }
       100% { transform: scale(1); opacity: 1; }
     }
-
     @keyframes pulse {
       0%, 100% { transform: scale(1); }
       50% { transform: scale(1.06); }
     }
-
     @keyframes glow {
       0%, 100% { background: radial-gradient(circle, #ffffff05, #0000); }
       50% { background: radial-gradient(circle, #ffffff20, #0000); }
     }
-
     @keyframes pulseText {
       0% { background-position: 0% 50%; }
       100% { background-position: 200% 50%; }
