--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,7 @@
       overflow-x: hidden;
       height: 100%;
       min-height: 100dvh;
+      padding-bottom: env(safe-area-inset-bottom); /* 👈 mejora para iOS/Android */
     }
     body.dark {
       background: #000;
@@ -130,7 +131,7 @@
       flex-direction: column;
       align-items: center;
       justify-content: flex-start;
-      padding: 3vh 2vw 2vh;
+      padding: 3vh 2vw calc(2vh + env(safe-area-inset-bottom, 24px)); /* 👈 solución crítica */
     }
     .shock {
       background: linear-gradient(135deg, #ff006e, #8338ec, #3a86ff);
@@ -215,22 +216,22 @@
   <script>
     const $ = id => document.getElementById(id);
     let libroActual, bloquePortada, revelado = false;
-    const emojis = ["🌊","🛡️","🧠","📘","🔮","❤️","✨","🪞"];
+    const emojis = ["🌊", "🛡️", "🧠", "📘", "🔮", "❤️", "✨", "🪞"];
 
     fetch("https://raw.githubusercontent.com/badirnakid/triggui-content/main/contenido.json")
       .then(res => res.json())
       .then(data => {
-        const libro = data.libros[Math.floor(Math.random()*data.libros.length)];
+        const libro = data.libros[Math.floor(Math.random() * data.libros.length)];
         libroActual = libro;
-        bloquePortada = Math.floor(Math.random()*4);
+        bloquePortada = Math.floor(Math.random() * 4);
         iniciarUI(libro);
       });
 
     function generarGradiente(color) {
-      const h = parseInt(color.slice(1,3),16),
-            l = parseInt(color.slice(3,5),16),
-            s = parseInt(color.slice(5,7),16);
-      const light = `rgba(${Math.min(h+30,255)},${Math.min(l+30,255)},${Math.min(s+30,255)},0.85)`;
+      const h = parseInt(color.slice(1, 3), 16),
+            l = parseInt(color.slice(3, 5), 16),
+            s = parseInt(color.slice(5, 7), 16);
+      const light = `rgba(${Math.min(h + 30, 255)},${Math.min(l + 30, 255)},${Math.min(s + 30, 255)},0.85)`;
       return `linear-gradient(135deg, ${color}, ${light})`;
     }
 
