--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,6 @@
       overflow-x: hidden;
       height: 100%;
       min-height: 100dvh;
-      padding-bottom: env(safe-area-inset-bottom); /* 👈 mejora para iOS/Android */
     }
     body.dark {
       background: #000;
@@ -131,7 +130,7 @@
       flex-direction: column;
       align-items: center;
       justify-content: flex-start;
-      padding: 3vh 2vw calc(2vh + env(safe-area-inset-bottom, 24px)); /* 👈 solución crítica */
+      padding: 3vh 2vw 6vh; /* 👈 Mejora clave */
     }
     .shock {
       background: linear-gradient(135deg, #ff006e, #8338ec, #3a86ff);
@@ -141,6 +140,7 @@
       border-radius: 999px;
       padding: 12px 26px;
       margin-top: 8px;
+      margin-bottom: 0.8vh; /* 👈 Sube botón */
       font-size: clamp(.9rem, 1.8vw, 1.2rem);
       cursor: pointer;
       box-shadow: 0 0 16px rgba(255, 255, 255, 0.15);
@@ -151,6 +151,7 @@
       font-size: clamp(.9rem, 1.2vw, 1.1rem);
       color: #fff;
       margin-top: 6px;
+      margin-bottom: 0.8vh; /* 👈 Sube texto */
       font-family: 'Poppins', sans-serif;
       text-align: center;
       white-space: nowrap;
@@ -166,6 +167,7 @@
       height: 20px;
       opacity: .9;
       margin-top: 1.5vh;
+      margin-bottom: 0.8vh; /* 👈 Sube imagen */
     }
     .hidden { display: none !important; }
     .frase-magica {
@@ -216,22 +218,22 @@
   <script>
     const $ = id => document.getElementById(id);
     let libroActual, bloquePortada, revelado = false;
-    const emojis = ["🌊", "🛡️", "🧠", "📘", "🔮", "❤️", "✨", "🪞"];
+    const emojis = ["🌊","🛡️","🧠","📘","🔮","❤️","✨","🪞"];
 
     fetch("https://raw.githubusercontent.com/badirnakid/triggui-content/main/contenido.json")
       .then(res => res.json())
       .then(data => {
-        const libro = data.libros[Math.floor(Math.random() * data.libros.length)];
+        const libro = data.libros[Math.floor(Math.random()*data.libros.length)];
         libroActual = libro;
-        bloquePortada = Math.floor(Math.random() * 4);
+        bloquePortada = Math.floor(Math.random()*4);
         iniciarUI(libro);
       });
 
     function generarGradiente(color) {
-      const h = parseInt(color.slice(1, 3), 16),
-            l = parseInt(color.slice(3, 5), 16),
-            s = parseInt(color.slice(5, 7), 16);
-      const light = `rgba(${Math.min(h + 30, 255)},${Math.min(l + 30, 255)},${Math.min(s + 30, 255)},0.85)`;
+      const h = parseInt(color.slice(1,3),16),
+            l = parseInt(color.slice(3,5),16),
+            s = parseInt(color.slice(5,7),16);
+      const light = `rgba(${Math.min(h+30,255)},${Math.min(l+30,255)},${Math.min(s+30,255)},0.85)`;
       return `linear-gradient(135deg, ${color}, ${light})`;
     }
 
