--- a/public/index.html
+++ b/public/index.html
@@ -8,13 +8,15 @@
   <style>
     :root {
       --header-height: 60px;
-      --footer-height: 120px;
+      --footer-height: 160px;
     }
+
     * {
       margin: 0;
       padding: 0;
       box-sizing: border-box;
     }
+
     html, body {
       font-family: 'Archivo', sans-serif;
       background: linear-gradient(135deg, #0d0e1a, #1a1c2d);
@@ -23,9 +25,11 @@
       height: 100%;
       min-height: 100dvh;
     }
+
     body.dark {
       background: #000;
     }
+
     .main {
       display: flex;
       flex-direction: column;
@@ -34,6 +38,7 @@
       opacity: 0;
       animation: fadeIn 1.2s ease forwards;
     }
+
     .header-message {
       height: var(--header-height);
       display: flex;
@@ -41,6 +46,7 @@
       justify-content: center;
       padding: 0 2vw;
     }
+
     .header-gradient {
       font-weight: 900;
       font-size: clamp(1.4rem, 2.6vw, 2.2rem);
@@ -51,6 +57,7 @@
       animation: pulseText 8s linear infinite;
       white-space: nowrap;
     }
+
     .grid {
       flex: 1;
       display: grid;
@@ -59,12 +66,14 @@
       grid-template-columns: 1fr 1fr;
       grid-template-rows: 1fr 1fr;
     }
+
     @media (orientation: landscape) {
       .grid {
         grid-template-columns: repeat(4, 1fr);
         grid-template-rows: 1fr;
       }
     }
+
     .block {
       position: relative;
       display: flex;
@@ -82,6 +91,7 @@
       overflow: hidden;
       animation: popIn 0.7s ease forwards;
     }
+
     .block-content {
       position: absolute;
       inset: 0;
@@ -91,7 +101,9 @@
       padding: 6px;
       text-align: center;
     }
+
     .label { z-index: 1; }
+
     .accionable {
       color: #fff;
       font-family: 'Poppins', sans-serif;
@@ -104,6 +116,7 @@
       text-align: center;
       box-shadow: 0 6px 20px rgba(0, 0, 0, .3);
     }
+
     .portada-wrapper {
       width: 100%;
       height: 100%;
@@ -113,6 +126,7 @@
       background: radial-gradient(circle, #ffffff10, #0000);
       animation: glow 6s ease-in-out infinite;
     }
+
     .portada-wrapper img {
       width: 80%;
       max-height: 90%;
@@ -121,17 +135,20 @@
       box-shadow: 0 10px 24px rgba(0, 0, 0, .4);
       transition: transform 0.5s;
     }
+
     .portada-wrapper img:hover {
       transform: scale(1.03) rotateY(4deg) rotateX(2deg);
     }
+
     .footer {
-      height: var(--footer-height);
+      flex-shrink: 0;
+      padding: 4vh 2vw calc(5vh + env(safe-area-inset-bottom));
       display: flex;
       flex-direction: column;
       align-items: center;
       justify-content: flex-start;
-      padding: 3vh 2vw 6vh; /* 👈 Mejora clave */
     }
+
     .shock {
       background: linear-gradient(135deg, #ff006e, #8338ec, #3a86ff);
       color: white;
@@ -139,37 +156,37 @@
       border: none;
       border-radius: 999px;
       padding: 12px 26px;
-      margin-top: 8px;
-      margin-bottom: 0.8vh; /* 👈 Sube botón */
+      margin-top: 12px;
       font-size: clamp(.9rem, 1.8vw, 1.2rem);
       cursor: pointer;
       box-shadow: 0 0 16px rgba(255, 255, 255, 0.15);
       animation: pulse 2s infinite;
       max-width: 95%;
     }
+
     .counter {
       font-size: clamp(.9rem, 1.2vw, 1.1rem);
       color: #fff;
-      margin-top: 6px;
-      margin-bottom: 0.8vh; /* 👈 Sube texto */
+      margin-top: 10px;
       font-family: 'Poppins', sans-serif;
       text-align: center;
       white-space: nowrap;
       opacity: 0;
       animation: fadeIn 0.3s forwards;
     }
+
     .resaltado {
       font-size: 1.1em;
       color: #ffeb3b;
       font-weight: 700;
     }
+
     .trigguiletras {
-      height: 20px;
-      opacity: .9;
-      margin-top: 1.5vh;
-      margin-bottom: 0.8vh; /* 👈 Sube imagen */
+      height: 22px;
+      opacity: .92;
+      margin-top: 2vh;
     }
-    .hidden { display: none !important; }
+
     .frase-magica {
       font-size: 1rem;
       color: #00ffff;
@@ -178,29 +195,35 @@
       font-family: 'Poppins', sans-serif;
       animation: fadeIn 1.4s ease;
     }
+
+    .hidden { display: none !important; }
+
     @keyframes fadeIn {
       from { opacity: 0; transform: translateY(20px); }
       to { opacity: 1; transform: translateY(0); }
     }
+
     @keyframes popIn {
       0% { transform: scale(0.95); opacity: 0; }
       100% { transform: scale(1); opacity: 1; }
     }
+
     @keyframes pulse {
       0%, 100% { transform: scale(1); }
       50% { transform: scale(1.06); }
     }
+
     @keyframes glow {
       0%, 100% { background: radial-gradient(circle, #ffffff05, #0000); }
       50% { background: radial-gradient(circle, #ffffff20, #0000); }
     }
+
     @keyframes pulseText {
       0% { background-position: 0% 50%; }
       100% { background-position: 200% 50%; }
     }
   </style>
 </head>
-
 <body>
   <div class="main">
     <div class="header-message">
