--- a/public/index.html
+++ b/public/index.html
@@ -8,15 +8,13 @@
   <style>
     :root {
       --header-height: 60px;
-      --footer-height: 160px;
+      --footer-height: 120px;
     }
-
     * {
       margin: 0;
       padding: 0;
       box-sizing: border-box;
     }
-
     html, body {
       font-family: 'Archivo', sans-serif;
       background: linear-gradient(135deg, #0d0e1a, #1a1c2d);
@@ -25,11 +23,9 @@
       height: 100%;
       min-height: 100dvh;
     }
-
     body.dark {
       background: #000;
     }
-
     .main {
       display: flex;
       flex-direction: column;
@@ -38,7 +34,6 @@
       opacity: 0;
       animation: fadeIn 1.2s ease forwards;
     }
-
     .header-message {
       height: var(--header-height);
       display: flex;
@@ -46,7 +41,6 @@
       justify-content: center;
       padding: 0 2vw;
     }
-
     .header-gradient {
       font-weight: 900;
       font-size: clamp(1.4rem, 2.6vw, 2.2rem);
@@ -57,7 +51,6 @@
       animation: pulseText 8s linear infinite;
       white-space: nowrap;
     }
-
     .grid {
       flex: 1;
       display: grid;
@@ -66,14 +59,12 @@
       grid-template-columns: 1fr 1fr;
       grid-template-rows: 1fr 1fr;
     }
-
     @media (orientation: landscape) {
       .grid {
         grid-template-columns: repeat(4, 1fr);
         grid-template-rows: 1fr;
       }
     }
-
     .block {
       position: relative;
       display: flex;
@@ -91,7 +82,6 @@
       overflow: hidden;
       animation: popIn 0.7s ease forwards;
     }
-
     .block-content {
       position: absolute;
       inset: 0;
@@ -101,9 +91,7 @@
       padding: 6px;
       text-align: center;
     }
-
     .label { z-index: 1; }
-
     .accionable {
       color: #fff;
       font-family: 'Poppins', sans-serif;
@@ -116,7 +104,6 @@
       text-align: center;
       box-shadow: 0 6px 20px rgba(0, 0, 0, .3);
     }
-
     .portada-wrapper {
       width: 100%;
       height: 100%;
@@ -126,7 +113,6 @@
       background: radial-gradient(circle, #ffffff10, #0000);
       animation: glow 6s ease-in-out infinite;
     }
-
     .portada-wrapper img {
       width: 80%;
       max-height: 90%;
@@ -135,20 +121,17 @@
       box-shadow: 0 10px 24px rgba(0, 0, 0, .4);
       transition: transform 0.5s;
     }
-
     .portada-wrapper img:hover {
       transform: scale(1.03) rotateY(4deg) rotateX(2deg);
     }
-
     .footer {
-      flex-shrink: 0;
-      padding: 4vh 2vw calc(5vh + env(safe-area-inset-bottom));
+      height: var(--footer-height);
       display: flex;
       flex-direction: column;
       align-items: center;
       justify-content: flex-start;
+      padding: 4vh 2vw 8vh;
     }
-
     .shock {
       background: linear-gradient(135deg, #ff006e, #8338ec, #3a86ff);
       color: white;
@@ -156,37 +139,34 @@
       border: none;
       border-radius: 999px;
       padding: 12px 26px;
-      margin-top: 12px;
+      margin-top: 8px;
       font-size: clamp(.9rem, 1.8vw, 1.2rem);
       cursor: pointer;
       box-shadow: 0 0 16px rgba(255, 255, 255, 0.15);
       animation: pulse 2s infinite;
       max-width: 95%;
     }
-
     .counter {
       font-size: clamp(.9rem, 1.2vw, 1.1rem);
       color: #fff;
-      margin-top: 10px;
+      margin-top: 6px;
       font-family: 'Poppins', sans-serif;
       text-align: center;
       white-space: nowrap;
       opacity: 0;
       animation: fadeIn 0.3s forwards;
     }
-
     .resaltado {
       font-size: 1.1em;
       color: #ffeb3b;
       font-weight: 700;
     }
-
     .trigguiletras {
-      height: 22px;
-      opacity: .92;
-      margin-top: 2vh;
+      height: 20px;
+      opacity: .9;
+      margin-top: 1.5vh;
     }
-
+    .hidden { display: none !important; }
     .frase-magica {
       font-size: 1rem;
       color: #00ffff;
@@ -195,35 +175,29 @@
       font-family: 'Poppins', sans-serif;
       animation: fadeIn 1.4s ease;
     }
-
-    .hidden { display: none !important; }
-
     @keyframes fadeIn {
       from { opacity: 0; transform: translateY(20px); }
       to { opacity: 1; transform: translateY(0); }
     }
-
     @keyframes popIn {
       0% { transform: scale(0.95); opacity: 0; }
       100% { transform: scale(1); opacity: 1; }
     }
-
     @keyframes pulse {
       0%, 100% { transform: scale(1); }
       50% { transform: scale(1.06); }
     }
-
     @keyframes glow {
       0%, 100% { background: radial-gradient(circle, #ffffff05, #0000); }
       50% { background: radial-gradient(circle, #ffffff20, #0000); }
     }
-
     @keyframes pulseText {
       0% { background-position: 0% 50%; }
       100% { background-position: 200% 50%; }
     }
   </style>
 </head>
+
 <body>
   <div class="main">
     <div class="header-message">
@@ -241,22 +215,22 @@
   <script>
     const $ = id => document.getElementById(id);
     let libroActual, bloquePortada, revelado = false;
-    const emojis = ["🌊","🛡️","🧠","📘","🔮","❤️","✨","🪞"];
+    const emojis = ["🌊", "🛡️", "🧠", "📘", "🔮", "❤️", "✨", "🪞"];
 
     fetch("https://raw.githubusercontent.com/badirnakid/triggui-content/main/contenido.json")
       .then(res => res.json())
       .then(data => {
-        const libro = data.libros[Math.floor(Math.random()*data.libros.length)];
+        const libro = data.libros[Math.floor(Math.random() * data.libros.length)];
         libroActual = libro;
-        bloquePortada = Math.floor(Math.random()*4);
+        bloquePortada = Math.floor(Math.random() * 4);
         iniciarUI(libro);
       });
 
     function generarGradiente(color) {
-      const h = parseInt(color.slice(1,3),16),
-            l = parseInt(color.slice(3,5),16),
-            s = parseInt(color.slice(5,7),16);
-      const light = `rgba(${Math.min(h+30,255)},${Math.min(l+30,255)},${Math.min(s+30,255)},0.85)`;
+      const h = parseInt(color.slice(1, 3), 16),
+        l = parseInt(color.slice(3, 5), 16),
+        s = parseInt(color.slice(5, 7), 16);
+      const light = `rgba(${Math.min(h + 30, 255)},${Math.min(l + 30, 255)},${Math.min(s + 30, 255)},0.85)`;
       return `linear-gradient(135deg, ${color}, ${light})`;
     }
 
