--- a/public/index.html
+++ b/public/index.html
@@ -130,7 +130,7 @@
       flex-direction: column;
       align-items: center;
       justify-content: flex-start;
-      padding: 4vh 2vw 8vh;
+      padding: 3vh 2vw 2vh;
     }
     .shock {
       background: linear-gradient(135deg, #ff006e, #8338ec, #3a86ff);
@@ -175,6 +175,13 @@
       font-family: 'Poppins', sans-serif;
       animation: fadeIn 1.4s ease;
     }
+
+    @media screen and (max-width: 800px) and (min-height: 600px) and (-webkit-device-pixel-ratio: 2) {
+      .footer {
+        padding-bottom: 10vh !important;
+      }
+    }
+
     @keyframes fadeIn {
       from { opacity: 0; transform: translateY(20px); }
       to { opacity: 1; transform: translateY(0); }
@@ -215,22 +222,22 @@
   <script>
     const $ = id => document.getElementById(id);
     let libroActual, bloquePortada, revelado = false;
-    const emojis = ["🌊", "🛡️", "🧠", "📘", "🔮", "❤️", "✨", "🪞"];
+    const emojis = ["🌊","🛡️","🧠","📘","🔮","❤️","✨","🪞"];
 
     fetch("https://raw.githubusercontent.com/badirnakid/triggui-content/main/contenido.json")
       .then(res => res.json())
       .then(data => {
-        const libro = data.libros[Math.floor(Math.random() * data.libros.length)];
+        const libro = data.libros[Math.floor(Math.random()*data.libros.length)];
         libroActual = libro;
-        bloquePortada = Math.floor(Math.random() * 4);
+        bloquePortada = Math.floor(Math.random()*4);
         iniciarUI(libro);
       });
 
     function generarGradiente(color) {
-      const h = parseInt(color.slice(1, 3), 16),
-        l = parseInt(color.slice(3, 5), 16),
-        s = parseInt(color.slice(5, 7), 16);
-      const light = `rgba(${Math.min(h + 30, 255)},${Math.min(l + 30, 255)},${Math.min(s + 30, 255)},0.85)`;
+      const h = parseInt(color.slice(1,3),16),
+            l = parseInt(color.slice(3,5),16),
+            s = parseInt(color.slice(5,7),16);
+      const light = `rgba(${Math.min(h+30,255)},${Math.min(l+30,255)},${Math.min(s+30,255)},0.85)`;
       return `linear-gradient(135deg, ${color}, ${light})`;
     }
 
