--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
   <style>
     :root {
       --header-height: 60px;
+      --footer-height: 160px;
     }
     * { margin: 0; padding: 0; box-sizing: border-box; }
     html, body {
@@ -21,16 +22,15 @@
       display: flex;
       flex-direction: column;
       height: 100dvh;
-      max-height: 100vh;
       overflow: hidden;
     }
     .header-message {
       height: var(--header-height);
-      flex-shrink: 0;
       display: flex;
       align-items: center;
       justify-content: center;
       padding: 0 2vw;
+      flex-shrink: 0;
     }
     .header-gradient {
       font-weight: 900;
@@ -43,29 +43,17 @@
       white-space: nowrap;
     }
     .grid {
+      height: calc(100dvh - var(--header-height) - var(--footer-height));
       display: grid;
       grid-template-columns: 1fr 1fr;
       grid-template-rows: 1fr 1fr;
       gap: 1.5vw;
       padding: 2vw;
-      flex: 1;
-      min-height: 0;
     }
     @media (orientation: landscape) {
       .grid {
         grid-template-columns: repeat(4, 1fr);
         grid-template-rows: 1fr;
-      }
-    }
-    @media (max-width: 768px) and (orientation: landscape) {
-      .grid {
-        grid-template-columns: 1fr 1fr;
-        grid-template-rows: 1fr 1fr;
-      }
-    }
-    @media (max-height: 500px) and (orientation: landscape) {
-      .block {
-        min-height: 120px;
       }
     }
     .block {
@@ -127,13 +115,13 @@
       transform: scale(1.03) rotateY(4deg) rotateX(2deg);
     }
     .footer {
-      flex-shrink: 0;
-      min-height: 160px;
-      padding: max(2vh, 16px) 2vw;
+      height: var(--footer-height);
       display: flex;
       flex-direction: column;
       align-items: center;
       justify-content: flex-start;
+      padding: 2vh 2vw;
+      flex-shrink: 0;
     }
     .shock {
       background: linear-gradient(135deg, #ff006e, #8338ec, #3a86ff);
